Fixed Joomla frontend image selection alignment issues

--- a/engines/joomla/nucleus/scss/joomla/theme/breakpoints/_bootstrap.scss
+++ b/engines/joomla/nucleus/scss/joomla/theme/breakpoints/_bootstrap.scss
@@ -28,6 +28,12 @@
 		float: none;
 		margin-left: 0;
 	}
+
+    .manager.thumbnails > li {
+        float: left;
+        margin-left: 20px;
+    }
+
 	[class*="span"],
 	.uneditable-input[class*="span"],
 	.row-fluid [class*="span"] {
